patches/new-colon-uninit
Bottom: abb0de3460b167469c4c939068954e7763aec1bd
Top:    c7fa3ab674ecc16be065ea5e6a4fb303142f5c60
Author: scott snyder <sss@karma>
Date:   2021-12-16 12:39:42 -0500

We get a false positive uninitialized variable warning from this source:

struct DbObjectGuard   {
  DbObjectGuard();
};

void allocate(char* ptr)
{
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
}


$ cppcheck x.cc
Checking x.cc ...
x.cc:7:18: error: Uninitialized variable: g [legacyUninitvar]
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
                 ^

The warning goes away if the `::' before the new is removed.

Try to fix by extending matching to recognize this case.
